# MLops_team41

./: .gitignore  01_EDA_and_Data_Cleaning.ipynb  Dockerfile  EDA_MLops_team41 ML.ipynb  README.md  conftest.py  dvc.yaml  params.yaml  requirements-docker.txt  requirements.txt
.dvc/: README.md  config  config.local.example
DEP/: README.md
DEP/Data_exploration_and_preprocessing/: pyproject.toml  readme.md  requirements.txt  structure.txt  trial.py
DEP/Data_exploration_and_preprocessing/data/: processed.dvc  raw.dvc
DEP/Data_exploration_and_preprocessing/data/processed/: .gitignore
DEP/Data_exploration_and_preprocessing/mlops_team41.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
DEP/Data_exploration_and_preprocessing/reports/: figures.dvc
DEP/Data_exploration_and_preprocessing/src/: __init__.py  cli.py  config.py  data.py  features.py  logger.py  visualization.py
EDA/: README.md
EDA/online-news-popularity/: pyproject.toml  readme.md  requirements.txt  structure.txt
EDA/online-news-popularity/configs/: clean.yaml  paths.yaml
EDA/online-news-popularity/data/: processed.dvc  raw.dvc
EDA/online-news-popularity/data/processed/: df_final_validated.audit.json
EDA/online-news-popularity/src/online_news_popularity/: __init__.py  io.py
EDA/online-news-popularity/src/online_news_popularity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
EDA/online-news-popularity/src/online_news_popularity/cleaning/: calibration.py  enforcement.py  imputation.py  type_coercion.py  url_filters.py
EDA/online-news-popularity/src/online_news_popularity/features/: groups.py
EDA/online-news-popularity/src/online_news_popularity/pipeline/: clean_dataset.py
Fase1/: README.md
MCE/Model_construction_and_evaluation/: X_test.csv  params.yaml  preds.csv  pyproject.toml  readme.md  structure.txt  trial.py
MCE/Model_construction_and_evaluation/artifacts/: feature_list.csv
MCE/Model_construction_and_evaluation/artifacts/metrics/: leaderboard.json
MCE/Model_construction_and_evaluation/mlops_MCE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
MCE/Model_construction_and_evaluation/mlruns/0/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/0c4f8914c44e476ab140d88789763fe3/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/0c4f8914c44e476ab140d88789763fe3/metrics/: r2  rmse
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/0c4f8914c44e476ab140d88789763fe3/outputs/m-937d418bf73f411191f1ccd981231463/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/0c4f8914c44e476ab140d88789763fe3/tags/: mlflow.runName
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/299ce6af597940ae8871e4316f0013b4/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/299ce6af597940ae8871e4316f0013b4/tags/: mlflow.runName
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2da9764c2e9f4aa082e85354839d3273/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2da9764c2e9f4aa082e85354839d3273/tags/: mlflow.runName
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2f19eba920f84d23a8511ef6781b054a/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2f19eba920f84d23a8511ef6781b054a/metrics/: r2  rmse
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2f19eba920f84d23a8511ef6781b054a/outputs/m-ee5ebf3755a04e0b872a1043da55ff56/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/2f19eba920f84d23a8511ef6781b054a/tags/: mlflow.runName
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/b70d735f9cda46579c0f29bf0bf540a1/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/b70d735f9cda46579c0f29bf0bf540a1/tags/: mlflow.runName
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-937d418bf73f411191f1ccd981231463/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-937d418bf73f411191f1ccd981231463/artifacts/: MLmodel  model.pkl
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-937d418bf73f411191f1ccd981231463/metrics/: r2  rmse
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-937d418bf73f411191f1ccd981231463/tags/: mlflow.source.name
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-ee5ebf3755a04e0b872a1043da55ff56/: meta.yaml
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-ee5ebf3755a04e0b872a1043da55ff56/artifacts/: MLmodel
MCE/Model_construction_and_evaluation/mlruns/764359925308905560/models/m-ee5ebf3755a04e0b872a1043da55ff56/metrics/: r2  rmse
MCE/Model_construction_and_evaluation/src/: __init__.py  train_eval.py
MCE/Model_construction_and_evaluation/src/ci/: pre_commit.yaml
MCE/Model_construction_and_evaluation/src/config/: experiment.yaml
MCE/Model_construction_and_evaluation/src/data/: __init__.py  load_and_split.py
MCE/Model_construction_and_evaluation/src/features/: __init__.py  drop_columns.py  drop_high_corr_features.py
MCE/Model_construction_and_evaluation/src/models/: __init__.py  baseline.py  boosting.py  evaluate.py  predict.py  train.py
MCE/Model_construction_and_evaluation/src/pipelines/: __init__.py  training_pipeline.py
MCE/Model_construction_and_evaluation/src/scripts/: evaluate.py  predict.py  run_eda.sh  run_train.sh  train.py
MCE/Model_construction_and_evaluation/src/tests/: test_train.py
MCE/Model_construction_and_evaluation/src/utils/: __init__.py  dataframe_ops.py  feature_selection.py  io.py
MCE/Model_construction_and_evaluation/tests/integration/: conftest.py  test_train_eval_integration.py
MCE/Model_construction_and_evaluation/tests/unit/: test_train_eval_unit.py
Testr/: Makefile  README.md  pyproject.toml
app/: main.py
data/: raw.dvc
models/: .gitignore
src/: run_clean.sh  (+2 more)
(+11 files in other folders)
