# ---------------------------------------------------------------------------
# Project metadata  (PEP 621)
# ---------------------------------------------------------------------------
[project]
name            = "mlops-team41"
version         = "0.1.1"
description     = "Data-exploration & preprocessing pipeline for Team 41"
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "MIT"}

authors = [{name = "Team 41", email = "team41@example.com"}]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Data Processing",
]

# ---------------------------------------------------------------------------
# Runtime + optional dependencies
# ---------------------------------------------------------------------------
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

# ---------------------------------------------------------------------------
# Convenience console script
# ---------------------------------------------------------------------------
[project.scripts]
mlops41 = "src.cli:main"

# ---------------------------------------------------------------------------
# Build backend
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Package discovery (standard layout, no “src-layout” mapping)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["src", "src.*"]
