# ─────────────────────────────────────────────────────────────────────────────
#  Project metadata  (PEP 621)
# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "mlops_MCE"
version         = "0.1.0"
description     = "End-to-end tabular ML pipeline (Team 41)"
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "MIT"}
authors = [
  {name = "Team 41", email = "team41@example.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ─────────────────────────────────────────────────────────────────────────────
#  Runtime dependencies
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
  "pandas>=1.5",
  "numpy>=1.22",
  "scikit-learn>=1.2",
  "joblib>=1.2",
  "pyyaml>=6.0",
  "fsspec>=2023.4.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.7"]                 # gradient-boosting back-end
viz     = ["matplotlib>=3.7", "seaborn>=0.13"]
dev     = [
  "pytest>=7.4",
  "black>=23.9",
  "ruff>=0.1.0",
  "mypy>=1.5",
  "build>=0.10",
  "twine>=4.0",
]

# ─────────────────────────────────────────────────────────────────────────────
#  Console scripts  –  puts `train` & `predict` on your PATH
# ─────────────────────────────────────────────────────────────────────────────
[project.scripts]
train   = "src.scripts.train:main"
predict = "src.scripts.predict:main"

# ─────────────────────────────────────────────────────────────────────────────
#  Build backend
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
#  Package discovery
#  • scan the project root (".")
#  • include *only* packages whose name starts with "src"
#    → this picks up  `src`, `src.scripts`, `src.models`, etc.
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["src*",]            # shell-style pattern; includes "src" and sub-pkgs

# ─────────────────────────────────────────────────────────────────────────────
#  Tooling configs (Black, Ruff, Mypy)
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
